--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,22 @@
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
+  
+  
+  <!-- map a servlet to a jsp / html file:  
+    
+  <servlet>
+    <servlet-name>adminDashboard</servlet-name>
+    <jsp-file>dashboard.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>adminDashboard</servlet-name>
+    <url-pattern>/admin/details/dashboard</url-pattern>
+  </servlet-mapping>
+    
+    -->
+  
+  
   <servlet>
     <description></description>
     <display-name>DisplayNameServlet</display-name>
